Completed signup package and hooked up to web-api. Can use the swagger ui to signup a new account.
