# example-project/cmd/web-api/docs/swagger.json
@@ -3,10 +3,10 @@
     "info": {
         "description": "This is a sample server celler server.",
         "title": "SaaS Example API",
-        "termsOfService": "/terms",
+        "termsOfService": "http://example.com/terms",
         "contact": {
             "name": "API Support",
-            "url": "/support",
+            "url": "http://example.com/support",
             "email": "support@geeksinthewoods.com"
         },
         "license": {
@@ -26,6 +26,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "account"
                 ],
                 "summary": "Read returns the specified account from the system.",
                 "operationId": "get-string-by-int",
@@ -75,6 +78,123 @@
                     }
                 }
             }
+        },
+        "/signup": {
+            "post": {
+                "description": "Signup creates a new account and user in the system.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "signup"
+                ],
+                "summary": "Signup handles new account creation.",
+                "parameters": [
+                    {
+                        "description": "Signup details",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/signup.SignupRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/signup.SignupResponse"
+                        },
+                        "headers": {
+                            "Token": {
+                                "type": "string",
+                                "description": "qwerty"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/web.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/web.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "description": "get string by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Read returns the specified user from the system.",
+                "operationId": "get-string-by-int",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/user.User"
+                        },
+                        "headers": {
+                            "Token": {
+                                "type": "string",
+                                "description": "qwerty"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/web.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/web.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/web.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -82,10 +202,12 @@
             "type": "object",
             "properties": {
                 "address1": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "221 Tatitlek Ave"
                 },
                 "address2": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Box #1832"
                 },
                 "archived_at": {
                     "type": "string"
@@ -94,36 +216,166 @@
                     "type": "string"
                 },
                 "city": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Valdez"
                 },
                 "country": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "USA"
                 },
                 "created_at": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "c4653bf9-5978-48b7-89c5-95704aebb7e2"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Company Name"
                 },
                 "region": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "AK"
                 },
                 "signup_user_id": {
                     "type": "string"
                 },
                 "status": {
-                    "type": "AccountStatus"
+                    "type": "string",
+                    "example": "active"
                 },
                 "timezone": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "America/Anchorage"
                 },
                 "updated_at": {
                     "type": "string"
                 },
                 "zipcode": {
+                    "type": "string",
+                    "example": "99686"
+                }
+            }
+        },
+        "signup.SignupRequest": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "object",
+                    "required": [
+                        "name",
+                        "address1",
+                        "city",
+                        "region",
+                        "country",
+                        "zipcode"
+                    ],
+                    "properties": {
+                        "address1": {
+                            "type": "string",
+                            "example": "221 Tatitlek Ave"
+                        },
+                        "address2": {
+                            "type": "string",
+                            "example": "Box #1832"
+                        },
+                        "city": {
+                            "type": "string",
+                            "example": "Valdez"
+                        },
+                        "country": {
+                            "type": "string",
+                            "example": "USA"
+                        },
+                        "name": {
+                            "type": "string",
+                            "example": "Company {RANDOM_UUID}"
+                        },
+                        "region": {
+                            "type": "string",
+                            "example": "AK"
+                        },
+                        "timezone": {
+                            "type": "string",
+                            "example": "America/Anchorage"
+                        },
+                        "zipcode": {
+                            "type": "string",
+                            "example": "99686"
+                        }
+                    }
+                },
+                "user": {
+                    "type": "object",
+                    "required": [
+                        "name",
+                        "email",
+                        "password"
+                    ],
+                    "properties": {
+                        "email": {
+                            "type": "string",
+                            "example": "{RANDOM_EMAIL}"
+                        },
+                        "name": {
+                            "type": "string",
+                            "example": "Gabi May"
+                        },
+                        "password": {
+                            "type": "string",
+                            "example": "SecretString"
+                        },
+                        "password_confirm": {
+                            "type": "string",
+                            "example": "SecretString"
+                        }
+                    }
+                }
+            }
+        },
+        "signup.SignupResponse": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "object",
+                    "$ref": "#/definitions/account.Account"
+                },
+                "user": {
+                    "type": "object",
+                    "$ref": "#/definitions/user.User"
+                }
+            }
+        },
+        "user.User": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "archived_at": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "gabi@geeksinthewoods.com"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "d69bdef7-173f-4d29-b52c-3edc60baf6a2"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Gabi May"
+                },
+                "timezone": {
+                    "type": "string",
+                    "example": "America/Anchorage"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
